--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@
     height: 200px;
     border: 2px solid rgb(230, 230, 230);
     box-shadow: 0 0 20px rgb(231, 231, 231);
+    transition: 150ms ease, border-radius 250ms ease;
 }
 
 .rounded-item_change-size {
@@ -77,9 +78,9 @@
 }
 
 .input-value {
-    width: 100%;
     font-family: 'Poppins', sans-serif;
     text-align: center;
+    padding: 0 .2rem;
     font-size: 1.5rem;
     border: none;
     border-bottom: 1px solid rgb(230, 230, 230);
@@ -87,6 +88,7 @@
     min-height: 40px;
     border-radius: .4rem;
     text-overflow: ellipsis;
+    flex-grow: 1;
 }
 
 .input-value:focus {
@@ -96,8 +98,8 @@
 .border-radius-settings {
     margin-top: 50px;
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     gap: 15px;
-    justify-content: center;
 }
