--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@
     place-items: center;
 }
 
+.app-title {
+    text-align: center;
+}
+
 .app-content {
     width: min(90%, 1000px);
     display: flex;
@@ -34,6 +38,43 @@
     border: 2px solid rgb(230, 230, 230);
     box-shadow: 0 0 20px rgb(231, 231, 231);
     transition: 150ms ease, border-radius 250ms ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-copy-code {
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 0 20px rgb(231, 231, 231);
+    border: none;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    padding: .3rem .8rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    outline: 2px solid rgb(230, 230, 230);
+}
+
+.copy-notification {
+    width: min(80%, 400px);
+    border: 2px solid rgb(230, 230, 230);
+    background-color: #fff;
+    box-shadow: 0 0 20px rgb(231, 231, 231);
+    text-align: center;
+    padding: 1rem;
+    border-radius: 1rem;
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%);
+    min-height: 50px;
+    transition: top 400ms ease;
+    cursor: pointer;
+    top: -100vh;
+}
+
+.copy-notification.active {
+    top: 1rem;
 }
 
 .rounded-item_change-size {
@@ -49,7 +90,8 @@
     transition: transform 100ms ease;
 }
 
-.rounded-item_change-size:active {
+.rounded-item_change-size:active,
+.button-copy-code:active {
     transform: scale(.98);
 }
 
