--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,4 @@
+@use 'colors';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 *, *::before, *::after {
@@ -13,41 +14,45 @@
     display: grid;
     place-items: center;
     padding: .5rem 0;
+    &__title {
+        text-align: center;
+    }
 }
 
-.app-title {
-    text-align: center;
+@mixin flex-col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .app-content {
+    @include flex-col;
     width: min(90%, 1000px);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
     gap: 1rem;
-    border: 1px solid rgb(228, 228, 228);
-    box-shadow: 0 0 20px rgb(240, 240, 240);
+    border: 1px solid colors.$darker-white;
+    box-shadow: 0 0 20px colors.$light-white;
     padding: 1rem;
     border-radius: 1rem;
 }
 
-.rounded-item {
+.live-preview-component {
     max-width: 500px;
     max-height: 500px;
     width: 200px;
     height: 200px;
+    min-width: 100px;
+    min-height: 100px;
     border: 2px solid rgb(230, 230, 230);
     box-shadow: 0 0 20px rgb(231, 231, 231);
     transition: 150ms ease, border-radius 250ms ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     margin-bottom: 1.5rem;
 }
 
-.button-copy-code {
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0 0 20px rgb(231, 231, 231);
+.generic-button-style {
+    background-color: colors.$white;
+    box-shadow: 0 0 20px colors.$darker-white;
     border: none;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
@@ -58,8 +63,18 @@
     outline: 2px solid rgb(230, 230, 230);
 }
 
-.copy-notification {
-    width: min(80%, 400px);
+.generic-button-style.clear-inputs {
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    transition: transform 500ms ease-in-out;
+}
+
+.generic-button-style.clear-inputs:focus {
+    transform: rotate(-1turn);
+}
+
+.copy-pop-up {
+    width: min(90%, 400px);
     border: 2px solid rgb(230, 230, 230);
     background-color: #fff;
     box-shadow: 0 0 20px rgb(231, 231, 231);
@@ -74,47 +89,26 @@
     top: -100vh;
 }
 
-.copy-notification.error {
-    background-color: rgb(255, 136, 136);
-}
-
-.copy-notification.active {
+.copy-pop-up.active {
     top: 1rem;
 }
 
-.close-notification {
+.copy-pop-up_close {
     cursor: pointer;
     float: right;
-    right: .5rem;
-    top: .5rem;
 }
 
-.close-notification.error {
-    background-color: rgb(255, 83, 83);
-    outline-color: transparent;
-    box-shadow: 0 0 20px 0 rgb(255, 136, 136);
-}
-
-.rounded-item_change-size {
-    border: none;
-    background-color: #fff;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
+.live-preview-component_change-size {
     font-size: 1.2rem;
     padding: .6rem 2rem;
-    border-radius: .45rem;
-    box-shadow: 0 0 20px rgb(230, 230, 230);
-    cursor: pointer;
-    transition: transform 100ms ease;
     margin-bottom: 1.5rem;
 }
 
-.rounded-item_change-size:active,
-.button-copy-code:active {
+.generic-button-style:active {
     transform: scale(.98);
 }
 
-.round-item-size-inputs {
+.live-preview-component_input-sizes {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -125,25 +119,21 @@
     transform-origin: top;
 }
 
-.round-item-size-inputs.active {
+.live-preview-component_input-sizes__col {
+    @include flex-col;
+}
+
+.live-preview-component_input-sizes.active {
     transform: scaleY(1);
     height: auto;
 }
 
 .input-caption {
-    display: block;
-    text-align: center;
     text-transform: uppercase;
     font-weight: 600;
-    letter-spacing: 1px;
-    margin-right: 8px;
 }
 
-.input-caption[for="width"] {
-    margin-right: 12px;
-}
- 
-.input-value {
+.input-element {
     width: min(100%, 300px);
     min-width: 200px;
     font-family: 'Poppins', sans-serif;
@@ -151,16 +141,16 @@
     padding: 0 .2rem;
     font-size: 1.5rem;
     border: none;
-    border-bottom: 1px solid rgb(230, 230, 230);
-    box-shadow: inset 0 0 5px 2px rgb(240, 240, 240);
+    box-shadow: inset 0 0 0 3px colors.$darker-white;
     min-height: 40px;
     border-radius: .4rem;
     text-overflow: ellipsis;
-
+    transition: box-shadow 120ms ease;
 }
 
-.input-value:focus {
-    outline: 2px solid rgb(230, 230, 230)
+.input-element:focus {
+    outline-color: transparent;
+    box-shadow: inset 0 0 0 1px colors.$darker-white;
 }
 
 .border-radius-settings {
