--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,5 @@
 @use 'colors';
+@use 'theme';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 *, *::before, *::after {
@@ -8,6 +9,7 @@
 }
 
 .app {
+    background-color: colors.$white;
     min-height: 100vh;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
@@ -16,6 +18,7 @@
     padding: .5rem 0;
     &__title {
         text-align: center;
+        margin-inline: auto;
     }
 }
 
@@ -30,9 +33,15 @@
     width: min(90%, 1000px);
     gap: 1rem;
     border: 1px solid colors.$darker-white;
-    box-shadow: 0 0 20px colors.$light-white;
+    box-shadow: 0 0 10px colors.$light-white;
     padding: 1rem;
     border-radius: 1rem;
+    &__header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
 
 .live-preview-component {
@@ -42,8 +51,8 @@
     height: 200px;
     min-width: 100px;
     min-height: 100px;
-    border: 2px solid rgb(230, 230, 230);
-    box-shadow: 0 0 20px rgb(231, 231, 231);
+    border: 1px solid colors.$darker-white;
+    box-shadow: 0 0 5px colors.$darker-white;
     transition: 150ms ease, border-radius 250ms ease;
     display: grid;
     place-items: center;
@@ -52,39 +61,34 @@
 
 .generic-button-style {
     background-color: colors.$white;
-    box-shadow: 0 0 20px colors.$darker-white;
+    box-shadow: 0 0 10px colors.$darker-white;
     border: none;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 15px;
     padding: .3rem .8rem;
-    border-radius: 1rem;
+    border-radius: 1.2rem;
     cursor: pointer;
     outline: 2px solid rgb(230, 230, 230);
+    transition: transform 100ms ease;
 }
 
 .generic-button-style.clear-inputs {
     aspect-ratio: 1 / 1;
     border-radius: 50%;
-    transition: transform 500ms ease-in-out;
-}
-
-.generic-button-style.clear-inputs:focus {
-    transform: rotate(-1turn);
 }
 
 .copy-pop-up {
     width: min(90%, 400px);
-    border: 2px solid rgb(230, 230, 230);
+    border: 1px solid rgb(230, 230, 230);
     background-color: #fff;
-    box-shadow: 0 0 20px rgb(231, 231, 231);
+    box-shadow: 0 0 10px rgb(231, 231, 231);
     text-align: center;
     padding: 1rem;
     border-radius: 1rem;
     position: fixed;
     left: 50%;
     transform: translate(-50%);
-    min-height: 50px;
     transition: top 400ms ease;
     top: -100vh;
 }
@@ -101,11 +105,11 @@
 .live-preview-component_change-size {
     font-size: 1.2rem;
     padding: .6rem 2rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .generic-button-style:active {
-    transform: scale(.98);
+    transform: scale(.96);
 }
 
 .live-preview-component_input-sizes {
@@ -154,8 +158,7 @@
 }
 
 .border-radius-settings {
-    margin-top: 50px;
-    width: 100%;
+    margin-top: 1.3rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
